<resources>
    <!-- Strings de aspecto general -->
    <string name="app_name">Taquilla_Mirandilla</string>
    <string name="action_settings">Settings</string>

    <!-- Strings para los fragmentos -->
    <string name="first_fragment_label">Taquilla Cádiz C.F.</string>
    <string name="second_fragment_label">Selección de partido</string>
    <string name="third_fragment_label">Selección de entrada</string>
    <string name="finalizar_fragment_label">Finalizar compra</string>
    <string name="fifth_fragment_label">Error</string>

    <!-- Strings para botones y labels -->
    <string name="inicio">Inicio</string>
    <string name="siguiente">Siguiente</string>
    <string name="partido_elegido">Partido elegido</string>
    <string name="productos">Taquilla virtual del Cádiz C.F.</string>
    <string name="pedido_realizado">Pedido realizado</string>
    <string name="datos_entrega">Datos de entrega</string>
    <string name="error_en_pago">Error en el pago</string>
    <string name="reintentar">Reintentar pago</string>
    <string name="primerPartido">Cádiz - Sevilla</string>
    <string name="segundoPartido">Cádiz - Osasuna</string>
    <string name="tercerPartido">Cádiz - Celta</string>

    <string name="share">Compartir</string>
    <string name="share_success_text">Acabo de comprar una entrada para el proximo partido del Cadiz por la App TaquillaMirandilla, si quieres venir conmigo, date prisa y saca tu entrada. Y recuerda: la lucha no se negocia.</string>


    <string name="ayuda_compra">Con esta app podrás comprar las entradas para los próximos partidos que disputará el Cádiz C.F. en el estadio Mirandilla. Si tiene alguna duda con su utilización, por favor, escriba un correo a taquilla@mirandilla.com. Gracias.</string>
    <string name="tribuna">Tribuna</string>
    <string name="comprar">Comprar</string>
    <string name="preferencia">Preferencia</string>
    <string name="fondo_sur">Fondo Sur</string>
    <string name="fondo_norte">Fondo norte</string>

    <string name="select_localidad">Selección de localidad</string>
    <string name="infoEleccionPartido">Has elegido comprar una entrada para el siguiente partido:</string>
    <string name="infoEleccionGrada">en la grada de</string>
    <string name="grada_elegida">Grada elegida</string>
    <string name="info_codigo_compra">Código de compra</string>
    <string name="text_codigo_compra">Código</string>
    <string name="validar_compra">Validar Compra</string>

    <!-- Formatting string -->
    <string name="quote_format">\"%s\"</string>
    <string name="codigo_format">Código de compra: %s</string>
    <string name="finalizar_compra">Finalizar la compra</string>
</resources>