<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.taquillamirandilla.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:popUpTo="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.taquillamirandilla.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">
        <action
            android:id="@+id/action_SecondFragment_to_localidadFragment"
            app:destination="@id/localidadFragment" />

    </fragment>
    <fragment
        android:id="@+id/confirmacionFragment"
        android:name="com.example.taquillamirandilla.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_confirmacion">
        <action
            android:id="@+id/action_thirdFragment_to_fourthFragment"
            app:destination="@id/fourthFragment"
            app:popUpTo="@id/FirstFragment" >
            <argument
                android:name="param1"
                android:defaultValue="0" />
        </action>
        <action
            android:id="@+id/action_thirdFragment_to_fifthFragment"
            app:destination="@id/fifthFragment"
            app:popUpTo="@id/confirmacionFragment" />
        <argument
            android:name="partido"
            android:defaultValue='"Error 2"'
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/fourthFragment"
        android:name="com.example.taquillamirandilla.FourthFragment"
        android:label="@string/fourth_fragment_label"
        tools:layout="@layout/fragment_fourth" >
        <action
            android:id="@+id/action_fourthFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:popUpTo="@id/FirstFragment" />
        <argument
            android:name="param1"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/fifthFragment"
        android:name="com.example.taquillamirandilla.FifthFragment"
        android:label="@string/fifth_fragment_label"
        tools:layout="@layout/fragment_fifth">
        <action
            android:id="@+id/action_fifthFragment_to_thirdFragment"
            app:destination="@id/confirmacionFragment"
            app:popUpTo="@id/confirmacionFragment" />
    </fragment>
    <fragment
        android:id="@+id/localidadFragment"
        android:name="com.example.taquillamirandilla.LocalidadFragment"
        android:label="@string/select_localidad"
        tools:layout="@layout/fragment_localidad">
        <action
            android:id="@+id/action_localidad_to_thirdFragment"
            app:destination="@id/confirmacionFragment" />
        <argument
            android:name="partido"
            app:argType="string"
            android:defaultValue='"Error"' />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.taquillamirandilla.aboutFragment"
        android:label="fragment_about"
        tools:layout="@layout/fragment_about" />
</navigation>